<resources>
    <string name="app_name">RugbyRefereeWatch</string>
    <string name="disconnected">Disconnected</string>
    <string name="bGetMatch_text">Get match from watch</string>
    <string name="bGetMatches_text">Get matches from watch</string>
    <string name="home">home</string>
    <string name="away">away</string>
    <string name="trys">Trys</string>
    <string name="conversions">Conversions</string>
    <string name="_0">0</string>
    <string name="goals">Goals</string>
    <string name="home_color">Home color</string>
    <string name="away_color">Away color</string>
    <string name="time_period">Time/period</string>
    <string name="period_count">Period count</string>
    <string name="sinbin">Sinbin</string>
    <string name="bPrepare_text">Send to watch</string>
    <string name="bConnect_text">Connnect</string>
    <string name="home_name">Home name</string>
    <string name="away_name">Away name</string>
    <string name="points_for_try">Points for Try</string>
    <string name="points_for_conversion">Points for Conversion</string>
    <string name="points_for_goal">Points for Goal</string>
    <string name="icon">icon</string>
    <string name="report">Report</string>
    <string name="prepare">Prepare</string>
    <string name="_40">40</string>
    <string name="_2">2</string>
    <string name="_10">10</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="match_type">Match type</string>
    <string name="exit">exit</string>
    <string name="tvFatal">Click here to install the Samsung Accessory Service</string>
    <string name="record_player">Record player #</string>
    <string name="bDelete_text">Delete selected</string>
    <string name="no_card_reason">reason not entered</string>
    <string name="bView_text">view</string>
    <string name="bShare_text">share</string>
    <string name="update_watch_app">Update app on watch to support this</string>
    <string name="did_not_understand_message">Did not understand message</string>
    <string name="first_connect">First connect with watch</string>
    <string name="history">History</string>
    <string name="tvTime_placeholder">00:00:00</string>
    <string name="tvTimer_placeholder">00:00</string>
    <string name="status_DISCONNECTED">Disconnected</string>
    <string name="status_CONNECTION_LOST">Connection lost</string>
    <string name="status_CONNECTED">Connected</string>
    <string name="status_GETTING_MATCHES">Getting matches</string>
    <string name="status_GETTING_MATCH">Getting match</string>
    <string name="status_PREPARE">Sending prepare</string>
    <string name="status_ERROR">error</string>
    <string name="status_CONNECTING">Connecting</string>
    <string name="matches_filename">matches.json</string>
    <string name="deletedmatches_filename">deleted_matches.json</string>
    <string name="bExport_text">Export selected</string>
    <string name="cbScreenOn">Keep screen on</string>
    <string name="bWatchSettings">Watch settings</string>
    <string name="bWatchSettings2">No watch settings</string>
    <string name="cbCountDown">Count</string>
</resources>
