<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/tvMatchHead"
        android:text="@string/match"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >
        <TableRow>
            <TextView
                android:id="@+id/tvHomeName"
                android:text="@string/home"
                android:layout_span="2"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/tvAwayName"
                android:text="@string/away"
                android:layout_span="2"
                android:textAlignment="center" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/trys" />
            <TextView
                android:id="@+id/tvHomeTrys"
                android:text="@string/_0" />
            <TextView
                android:text="@string/trys" />
            <TextView
                android:id="@+id/tvAwayTrys"
                android:text="@string/_0" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/conversions" />
            <TextView
                android:id="@+id/tvHomeCons"
                android:text="@string/_0" />
            <TextView
                android:text="@string/conversions" />
            <TextView
                android:id="@+id/tvAwayCons"
                android:text="@string/_0" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/goals" />
            <TextView
                android:id="@+id/tvHomeGoals"
                android:text="@string/_0" />
            <TextView
                android:text="@string/goals" />
            <TextView
                android:id="@+id/tvAwayGoals"
                android:text="@string/_0" />
        </TableRow>
        <TableRow>
            <Space />
            <TextView
                android:id="@+id/tvHomeTot"
                android:background="@drawable/table_tot_line"
                android:text="@string/_0"
                android:textStyle="bold" />
            <Space />
            <TextView
                android:id="@+id/tvAwayTot"
                android:background="@drawable/table_tot_line"
                android:text="@string/_0"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/tvEvents"
                android:layout_span="4"
                android:textAlignment="center" />
        </TableRow>
    </TableLayout>
</LinearLayout>
