<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <Button
        android:id="@+id/bGetMatch"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bGetMatch_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:visibility="gone" />
    <EditText
        android:id="@+id/etHomeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        android:visibility="gone" />
    <EditText
        android:id="@+id/etAwayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        android:visibility="gone" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dip"
        android:paddingEnd="20dip"
        android:stretchColumns="*" >
        <TableRow>
            <TextView
                android:id="@+id/tvHomeName"
                android:labelFor="@+id/etHomeName"
                android:layout_marginEnd="20dp"
                android:layout_span="2"
                android:gravity="center"
                android:text="@string/home"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvAwayName"
                android:labelFor="@+id/etAwayName"
                android:layout_marginStart="20dp"
                android:layout_span="2"
                android:gravity="center"
                android:text="@string/away"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/trys" />

            <TextView
                android:id="@+id/tvHomeTrys"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:text="@string/_0" />

            <TextView
                android:layout_marginStart="20dp"
                android:text="@string/trys" />

            <TextView
                android:id="@+id/tvAwayTrys"
                android:gravity="end"
                android:text="@string/_0" />
        </TableRow>

        <TableRow
            android:id="@+id/trCons" >

            <TextView android:text="@string/conversions" />

            <TextView
                android:id="@+id/tvHomeCons"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:text="@string/_0" />

            <TextView
                android:layout_marginStart="20dp"
                android:text="@string/conversions" />

            <TextView
                android:id="@+id/tvAwayCons"
                android:gravity="end"
                android:text="@string/_0" />
        </TableRow>

        <TableRow
            android:id="@+id/trGoals" >

            <TextView android:text="@string/goals" />

            <TextView
                android:id="@+id/tvHomeGoals"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:text="@string/_0" />

            <TextView
                android:layout_marginStart="20dp"
                android:text="@string/goals" />

            <TextView
                android:id="@+id/tvAwayGoals"
                android:gravity="end"
                android:text="@string/_0" />
        </TableRow>

        <TableRow>

            <Space />

            <TextView
                android:id="@+id/tvHomeTot"
                android:layout_marginEnd="20dp"
                android:background="@drawable/table_tot_line"
                android:gravity="end"
                android:text="@string/_0"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space />

            <TextView
                android:id="@+id/tvAwayTot"
                android:background="@drawable/table_tot_line"
                android:gravity="end"
                android:text="@string/_0"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">
        <LinearLayout
            android:id="@+id/llEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/tvTime"
                    android:layout_marginEnd="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvTime_placeholder"
                    />

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_marginEnd="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvTimer_placeholder"
                    />

                <TextView
                    android:id="@+id/tvScore"
                    android:gravity="end"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvTimer_placeholder"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bView"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bView_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:visibility="invisible" />

        <Button
            android:id="@+id/bShare"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bShare_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:visibility="invisible" />
    </LinearLayout>
</LinearLayout>
