<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/tvStatus"
            android:text="@string/disconnected"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvError"
            android:text="@string/space"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/bConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="bConnectClick"
            android:text="@string/bConnect_text"
            android:textAlignment="center"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/bGetMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:onClick="bGetMatchClick"
            android:text="@string/bGetMatch_text"
            android:textAlignment="center"
            android:textAllCaps="false" />
        <com.windkracht8.rugbyreferee.tlMatch
            android:id="@+id/tlMatch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
        <com.windkracht8.rugbyreferee.tlSettings
            android:id="@+id/tlSettings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
